<resources>
    <string name="app_name">RomashkaApp</string>

    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="tickets">Билеты</string>
    <string name="in_full_screen">На весь экран</string>
    <string name="layout">План</string>
    <string name="list">Список</string>
    <string name="filters">Фильтры</string>
    <string name="prices">Цены, ₽</string>
    <string name="close">Закрыть</string>
    <string name="unavailable">недоступно</string>
    <string name="sector">Сектор %s</string>
    <string name="sector_title">Сектор</string>
    <string name="row">Ряд</string>
    <string name="seat">Место</string>
    <string name="row_and_seat">Ряд %s, Место %s</string>
    <string name="no_events">Мероприятий нет</string>
    <string name="try_to_return_back_later">Попробуйте вернуться позже.</string>

    <string name="boarding_1_title">Смотрите расписание матчей</string>
    <string name="boarding_1_text">Вы попали куда нужно!</string>
    <string name="boarding_2_title">Покупайте билеты на матчи</string>
    <string name="boarding_2_text">Удобно и быстро!</string>
    <string name="boarding_3_title">Добавляйте матчи в календарь</string>
    <string name="boarding_3_text">Чтобы не пропустить матч!</string>
    <string name="boarding_4_title">Все билеты в приложении</string>
    <string name="boarding_4_text">Сканируйте QR-код и проходите!</string>
    <string name="last_boarding_btn_title">Вперед, за билетами!</string>

    <string-array name="boarding_titles">
        <item>@string/boarding_1_title</item>
        <item>@string/boarding_2_title</item>
        <item>@string/boarding_3_title</item>
        <item>@string/boarding_4_title</item>
    </string-array>
    <string-array name="boarding_texts">
        <item>@string/boarding_1_text</item>
        <item>@string/boarding_2_text</item>
        <item>@string/boarding_3_text</item>
        <item>@string/boarding_4_text</item>
    </string-array>

    <string name="matches">Матчи</string>
    <string name="view_all_matches">Посмотреть все матчи</string>
    <string name="services">Услуги</string>
    <string name="play_bill">Афиша</string>
    <string name="basket">Корзина</string>
    <string name="account">Аккаунт</string>
    <string name="calendar">Календарь</string>
    <string name="my_tickets">Мои билеты</string>
    <string name="save">Сохранить</string>
    <string name="entrance">Вход</string>
    <string name="email">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up">Зарегистрироваться</string>

    <string name="clean">Очистить</string>
    <string name="tickets_expires_in">Билеты доступны в корзине</string>
    <string name="order">Заказ №%s</string>
    <string name="i_have_a_promocode">У меня есть промокод</string>
    <string name="to_pay">К оплате</string>
    <string name="pay">Оплатить</string>
    <string name="go_to_pay">Перейти к оплате</string>
    <string name="commission">Комиссия</string>
    <string name="discount_by_promocode">Скидка по промокоду</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string-array name="months">
        <item>@string/january</item>
        <item>@string/february</item>
        <item>@string/march</item>
        <item>@string/april</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/august</item>
        <item>@string/september</item>
        <item>@string/october</item>
        <item>@string/november</item>
        <item>@string/december</item>
    </string-array>
    <string name="choose_price_title">Выберите цену, чтобы увидеть места\nна плане с выбранной ценой</string>
    <string name="apply">Применить</string>
    <string name="wrong_email_format">Неправильный адрес почты</string>
    <string name="wrong_password_format">Неправильный пароль почты</string>
    <string name="lastname">Фамилия</string>
    <string name="fathername">Отчество</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="courts">Площадки</string>
    <string name="championships">Турниры</string>
    <string name="reset">Сбросить</string>
    <string name="terms_of_use">Я ознакомился с Пользовательским соглашением, принимаю его и даю Согласие на обработку персональных данных</string>
    <string name="no_event_title">Без названия</string>
    <string name="main_game">Главная игра этого сезона</string>
    <string name="events_not_found_title">Матчи не найдены</string>
    <string name="events_not_found_text">По данному запросу матчей нет.\nПопробуйте изменить фильтры.</string>
    <string name="zone_price">%s ₽, свободно %s мест</string>
    <string name="rub">%s ₽</string>
    <string name="tickets_count">%s билета</string>
    <string name="one_ticket_count">%s билет</string>
    <string name="zero_ticket_count">%s билетов</string>
    <string name="input_promocode">Введите промокод</string>
    <string name="promocode">Промокод</string>
    <string name="you_are_in_a_payment_page">Вы находитесь на странице оплаты покупки</string>
    <string name="test_payment_text">Так как сейчас приложение является демонстрационным, никакие денежные средства не списываются! Для получения билета нажмите кнопку «‎Оплатить».</string>
    <string name="order_successfully_paid">Заказ успешно оплачен</string>
    <string name="we_send_tickets_to_the_email">Мы отправили билеты на указанную электронную почту %s</string>
    <string name="add_to">Добавить в</string>
    <string name="download">Скачать</string>
    <string name="back_to_afisha">Вернуться на Афишу</string>
    <string name="empty_basket">В корзине пока пусто</string>
    <string name="go_to_afisha_and_choose_seats">Перейдите на Афишу и выберите билет на матч</string>
    <string name="go_to_buy_something">Перейти к покупкам</string>
    <string name="order_wasnt_paid">Заказ не оплачен</string>
    <string name="return_back_to_payment">Перейти к оплате</string>
    <string name="share">Поделиться</string>
    <string name="there_are_would_be_your_tickets">Здесь хранятся Ваши билеты</string>
    <string name="there_are_would_be_your_tickets_after_pay">После оплаты заказа, на этой странице появятся Ваши билеты на матч</string>
    <string name="sign_in_or_sign_up">Войдите или создайте аккаунт</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="help">Помощь</string>
    <string name="about_app">О приложении</string>
    <string name="support_phone">+7 (843) 51122 33\nТехподдержка с 8.00 до 20.00</string>
    <string name="history">История покупок</string>
    <string name="upload_photo">Загрузить фотографию</string>
    <string name="make_a_photo">Сделать снимок</string>
    <string name="delete_a_photo">Удалить фотографию</string>
    <string name="cancel">Отмена</string>
    <string name="my_data">Мои данные</string>
    <string name="how_to_buy">Как купить?</string>
    <string name="purchase_rules">Правила покупки</string>
    <string name="return_tickets">Возврат билетов</string>
    <string name="contacts">Контакты</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="restore_password_title">Восстановление пароля</string>
    <string name="enter_your_email_for_restore_passwords">Укажите адрес электронной почты, который Вы использовали при регистрации в приложении. Мы отправим инструкцию по восстановлению пароля.</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="letter_is_send">Письмо отправлено</string>
    <string name="we_send_letter">Мы отправили письмо с инструкцией по восстановлению пароля на почту\n%s</string>
    <string name="return_back">Вернуться</string>
    <string name="important_field">*Поле должно быть заполнено</string>
    <string name="privacy_policy"><![CDATA[<font color=#ff000000>Нажимая на кнопку «Создать аккаунт», я соглашаюсь на</font><font color=#015BAA> обработку персональных данных</font> и принимаю<font color=#015BAA> Политику конфиденциальности</font>]]></string>
    <string name="account_created">Аккаунт успешно создан</string>
    <string name="lets_go_for_tickets">Вперед, за билетами!</string>
    <string name="step_1">Шаг 1.</string>
    <string name="step_2">Шаг 2.</string>
    <string name="step_3">Шаг 3.</string>
    <string name="step_4">Шаг 4.</string>
    <string name="step_5">Шаг 5.</string>
    <string name="step_6">Шаг 6.</string>
    <string name="step_1_text">Регистрация</string>
    <string name="step_2_text">Выбор мероприятия</string>
    <string name="step_3_text">Бронирование билетов</string>
    <string name="step_4_text">Подготовка к оплате</string>
    <string name="step_5_text">Оплата</string>
    <string name="step_6_text">Билеты</string>
    <string name="step_1_body_line_1_1">01\n\n</string>
    <string name="step_1_body_line_1_2">Для покупки билета зарегистрируйтесь в приложении\n\n</string>
    <string name="step_1_body_line_1_3">В связи с тем, что фамилия и имя, указанные при регистрации, печатаются на электронном билете, мы рекомендуем Вам сразу регистрироваться с Вашими реальными данными. Обязательно укажите Ваш адрес электронной почты и контактный телефон для возможности оперативного уведомления Вас об изменениях в мероприятии, на которые Вы приобрели билеты. Введенные Вами        данные остаются конфиденциальными.\n\n</string>
    <string name="step_1_body_line_2_1">02\n\n</string>
    <string name="step_1_body_line_2_2">Подтвердите электронную почту\n\n</string>
    <string name="step_1_body_line_2_3">На электронную почту будет выслано письмо для активации Вашего аккаунта. Перейдите по ссылке в письме для завершения процесса регистрации. После  войдите под своим логином и паролем.\n\n</string>

    <string name="step_2_body_line_1_1">Вы можете найти интересующее Вас мероприятие в списке в разделе</string>
    <string name="step_2_body_line_1_2">\n«‎Афиша».</string>
    <string name="step_2_body_line_2_1">\n\nДля поиска мероприятия по\nинтересующим критериям Вы можете:</string>
    <string name="step_2_body_line_3">\n\n— использовать фильтр по Календарю,\n\n— в поле для поиска ввести текст, по которому будет произведен поиск подходящих мероприятий,\n\n— использовать фильтры по площадкам и турнирам.\n\n</string>
    <string name="step_2_body_line_4">Нажатие на карточку мероприятия приведет Вас на страницу бронирования билетов.</string>
</resources>