<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    tools:ignore="HardcodedText"
    android:paddingTop="16dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/monday"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/pfbeauaanspro_reg"/>

    <TextView
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/pfbeauaanspro_reg" />

    <TextView
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/pfbeauaanspro_reg"/>

    <TextView
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thursday"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/pfbeauaanspro_reg" />

    <TextView
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/friday"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/pfbeauaanspro_reg"/>

    <TextView
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/saturday"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:fontFamily="@font/roboto" />

    <TextView
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sunday"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:fontFamily="@font/pfbeauaanspro_reg" />

</LinearLayout>

