<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingConstraints">
    <data>
        <import type="android.view.View"/>
        <variable
            name="visibilityOfBasket"
            type="Boolean" />
        <variable
            name="viewModel"
            type="ru.android.romashkaapp.basket.BasketViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fitsSystemWindows="true"
        tools:context="ru.android.romashkaapp.basket.BasketFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="34dp"
                android:background="@color/background">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_toolbar_title"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="textStart"
                    android:text="@string/basket"
                    android:fontFamily="@font/pfbeauaanspro_reg"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_clean"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:visibility="@{visibilityOfBasket == true ? View.GONE : View.VISIBLE}"
                    android:id="@+id/iv_event_not_found"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_empty_basket"
                    android:layout_marginTop="166dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:visibility="@{visibilityOfBasket ? View.GONE : View.VISIBLE}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_empty_basket"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="@string/empty_basket"
                    android:fontFamily="@font/pfbeauaanspro_reg"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_event_not_found"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:visibility="@{visibilityOfBasket ? View.GONE : View.VISIBLE}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_go_to_afisha_and_choose_seats"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:text="@string/go_to_afisha_and_choose_seats"
                    android:fontFamily="@font/pfbeauaanspro_reg"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_empty_basket"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:visibility="@{visibilityOfBasket ? View.GONE : View.VISIBLE}"
                    android:layout_width="205dp"
                    android:layout_height="0dp"
                    android:id="@+id/mb_go_to_buy_something"
                    android:text="@string/go_to_buy_something"
                    android:textAllCaps="false"
                    android:fontFamily="@font/pfbeauaanspro_reg"
                    android:letterSpacing="0"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:cornerRadius="8dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_go_to_afisha_and_choose_seats"
                    android:onClick="@{(view)->viewModel.onClick(view)}"/>

                <TextView
                    android:visibility="@{visibilityOfBasket ? View.VISIBLE : View.GONE}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_clean"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="viewStart"
                    android:text="@string/clean"
                    android:fontFamily="@font/pfbeauaanspro_reg"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toEndOf="@+id/tv_toolbar_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:visibility="@{visibilityOfBasket ? View.VISIBLE : View.GONE}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_expire_date"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="viewStart"
                    android:background="@drawable/rectangle_white"
                    android:text="@string/tickets_expires_in"
                    android:fontFamily="@font/pfbeauaanspro_reg"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_toolbar_title" />

                <TextView
                    android:visibility="@{visibilityOfBasket ? View.VISIBLE : View.GONE}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_order"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="viewStart"
                    android:text="@string/order"
                    android:textStyle="bold"
                    android:fontFamily="@font/pfbeauaanspro_reg"
                    android:layout_marginTop="17dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="13dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_expire_date"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:visibility="@{visibilityOfBasket ? View.VISIBLE : View.GONE}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/rv_cart_items"
                    android:layout_marginTop="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_order"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_bottomsheet"
            android:background="@drawable/rectangle_white"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:behavior_skipCollapsed="true"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_scroll_line"
                android:background="@drawable/ic_bottom_sheet_line"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pfbeauaanspro_reg"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:letterSpacing="0"
                android:text="@string/input_promocode"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_scroll_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/OutlinedBox"
                android:id="@+id/tif_promocode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/promocode"
                app:placeholderTextColor="@color/button_next_color"
                app:boxStrokeColor="@color/button_next_color"
                android:layout_marginTop="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintTextColor="@color/button_next_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/mb_apply"
                android:text="@string/apply"
                android:textAllCaps="false"
                android:fontFamily="@font/pfbeauaanspro_reg"
                android:letterSpacing="0"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tif_promocode"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{(view)->viewModel.onClick(view)}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>